--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -7,7 +7,14 @@
       <text class="userinfo-nickname">{{userInfo.nickName}}</text>
     </block>
   </view>
-  <view class="usermotto">
-    <text class="user-motto">{{motto}}</text>
+  <view class="userinfo">
+    <view class='usermotto'>
+      <text class="user-motto">{{motto}}</text>
+    </view>
+    <view class='pokemonitems'>
+      <block wx:for="{{pokemons}}" wx:for-item="pokemon" wx:key="index">
+        <text>{{index}} : {{pokemon.name}} \n</text>
+      </block>
+    </view>
   </view>
 </view>
