--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,4 +1,5 @@
 /**index.wxss**/
+
 .userinfo {
   display: flex;
   flex-direction: column;
@@ -17,5 +18,10 @@
 }
 
 .usermotto {
-  margin-top: 200px;
+  margin-bottom: 30px;
+  margin-top: 50px;
+}
+
+.pokemonitems{
+  align-items: stretch
 }
