添加控件背景色点击测试

--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -15,6 +15,10 @@
 
 
 </view>
-<button type='primary' bindtap="primary" bindtap='clickTemplate'>
+<button class='btnStyle' type='primary' bindtap='clickTemplate'>
   {{templateBtnName}}
+</button>
+
+<button class='btnStyle' type='primary' bindtap='clickViewBg'>
+  {{viewBgBtnName}}
 </button>
