--- a/pages/view/view.wxml
+++ b/pages/view/view.wxml
@@ -1,7 +1,17 @@
 <view class="container">
   <view>{{viewBgTips}}</view>
+
+  <view class='switchLayoutStyle'>
+    <text class='tipsStyle'>{{switchTips}}</text>
+    <switch checked bindchange="switchChange" />
+  </view>
+
   <view class='rootStyle' hover-class='rootPressStyle'>
-    <view class='contentStyle' hover-class='contentPressStyle' hover-stop-propagation='true' hover-start-time='500' hover-stay-time='2000'>
+
+
+    <view wx:if="{{isHoverStopPropagation}}" class='contentStyle' hover-class='contentPressStyle' hover-stop-propagation='true' hover-start-time='500' hover-stay-time='2000'>
+    </view>
+    <view wx:else class='contentStyle' hover-class='contentPressStyle' hover-start-time='500' hover-stay-time='2000'>
     </view>
   </view>
 </view>
